# SPP

SPP_CUDA_practical/code_task/: CMakeLists.txt  batch_job.sh
SPP_CUDA_practical/code_task/BoundSphere/: BoundSphereCreator.cpp  CMakeLists.txt  Miniball.cpp  Miniball_b.cpp
SPP_CUDA_practical/code_task/CUDATracing/: BitmapWriter.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  Colorfunctions.cpp  Direction.cpp  Dualray.cpp  Face.cpp  Flatpoint.cpp  GA_CPU_Tracer_glut.cpp  GA_GPU_Tracer_glut.cpp  LA_CPU_Tracer_glut.cpp  Light.cpp  Log.cpp  Material.cpp  MaterialBuilder.cpp  Mesh.cpp  Mesh2.cpp  Plane.cpp  Point.cpp  Pointpair.cpp  Ray.cpp  Ray3D.cpp  Sphere.cpp  SplitScene.cpp  Transformation.cpp  Triangle.cpp  VirtualTracer_glut.cpp  kernel.cu  kernel.cuh  kernelConst.cu  main_glut.cpp  timing.cpp
SPP_CUDA_practical/code_task/MeshReader/: CMakeLists.txt  MeshFileReader.cpp  list.cpp  objLoader.cpp  obj_parser.cpp  rtmLoader.cpp  string_extra.cpp  string_util.cpp
SPP_MPI_practical/code_task/HeatedPlate/: HeatedPlate.sh  HeatedPlate_Asynchronous.cpp  HeatedPlate_Synchronous.cpp  Makefile  heated-plate-parallel.cpp  heated_plate_ref_500.txt
SPP_MPI_practical/code_task/Integral/: Makefile  integral.c  integral.sh
SPP_OpenMP_practical_v3/code_task/ParallelDaxpy/: daxpy.sh
SPP_OpenMP_practical_v3/code_task/ParallelDaxpy/Benchmark/: Run1.txt  Run10.txt  Run11.txt  Run12.txt  Run13.txt  Run14.txt  Run15.txt  Run16.txt  Run2.txt  Run3.txt  Run4.txt  Run5.txt  Run6.txt  Run7.txt  Run8.txt  Run9.txt
SPP_OpenMP_practical_v3/code_task/ParallelDaxpy/daxpy_normal/: Makefile  daxpy  daxpy.cpp
SPP_OpenMP_practical_v3/code_task/ParallelDaxpy/daxpy_static/: Makefile  daxpy_static  daxpy_static.cpp
SPP_OpenMP_practical_v3/code_task/ParallelNbody/: CMakeLists.txt  SBatch_parallel.sh  SBatch_seriell.sh
SPP_OpenMP_practical_v3/code_task/ParallelNbody/include/: Body.h
(+6 files in other folders)
